cambio url pyme

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/feriapersaimg.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="https://www.feriapersaonline.com/" title="Ver pagina web"><i class="bx bx-link"></i></a>
+                <a href="https://feriapersaonline1.netlify.app/" title="Ver pagina web"><i class="bx bx-link"></i></a>
               </div>
             </div>
             <div class="my-2 text-center">
