--- a/index.html
+++ b/index.html
@@ -420,6 +420,14 @@
               <p>App react native comsume datos</p>
             </div>
           </div>
+          <div class="col-lg-4 col-md-6 portfolio-item">
+            <div>
+              <video src="/assets/video/icap.mp4" class="img-fluid" controls></video>
+            </div>
+            <div class="my-2 text-center">
+              <p>App web ICAP</p>
+            </div>
+          </div>
 
         </div>
 
