--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i>
               <span>Portafolio</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contacto</span></a></li>
-          <li><a href="./assets/cv/CVLukasLuisMedinaRozasTelefonoAcCompressed.pdf" download="CVLukasLuisMedinaRozas"
+          <li><a href="./assets/cv/cvLukasMedinaRozas.pdf" download="CVLukasLuisMedinaRozas"
               class="nav-link scrollto"><i class="bx bx-paperclip"></i> <span>Curriculum</span></a>
           </li>
         </ul>
@@ -345,7 +345,7 @@
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
+            <div class="portfolio-wrap border border-3 border-dark rounded-2">
               <img src="assets/img/portfolio/traeDatosMiBus.png" class="img-fluid" alt="encriptador de texto">
               <div class="portfolio-links">
                 <a href="https://seal-app-n5qcl.ondigitalocean.app/datos/pa1" title="Ver pagina web"><i
@@ -358,7 +358,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
+            <div class="portfolio-wrap border border-3 border-dark rounded-2">
               <img src="assets/img/portfolio/encriptador de texto img.png" class="img-fluid" alt="encriptador de texto">
               <div class="portfolio-links">
                 <a href="https://lukas-577.github.io/Encriptador-de-texto---Alura-Challenges-ONE/"
@@ -371,7 +371,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
+            <div class="portfolio-wrap border border-3 border-dark rounded-2">
               <img src="assets/img/portfolio/ahorcadoimg.png" class="img-fluid" alt="ahorcado">
               <div class="portfolio-links">
                 <a href="https://lukas-577.github.io/juego-Ahorcado/" title="Ver pagina web"><i
@@ -384,7 +384,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
+            <div class="portfolio-wrap border border-3 border-dark rounded-2">
               <img src="assets/img/portfolio/feriapersaimg.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="https://www.feriapersaonline.com/" title="Ver pagina web"><i class="bx bx-link"></i></a>
@@ -396,36 +396,55 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item">
-            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img class="d-block w-100" src="./assets/img/appReactNative/react1.jpg" alt="First slide">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="./assets/img/appReactNative/react2.jpg" alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="./assets/img/appReactNative/react3.jpg" alt="Third slide">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="./assets/img/appReactNative/react4.jpg" alt="Third slide">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="./assets/img/appReactNative/react5.jpg" alt="Third slide">
+            <div class="border border-5 border-dark rounded-2">
+              <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="d-block w-100" src="./assets/img/appReactNative/react1.jpg" alt="First slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="./assets/img/appReactNative/react2.jpg" alt="Second slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="./assets/img/appReactNative/react3.jpg" alt="Third slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="./assets/img/appReactNative/react4.jpg" alt="Third slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="./assets/img/appReactNative/react5.jpg" alt="Third slide">
+                  </div>
                 </div>
               </div>
-
             </div>
             <div class="my-2 text-center">
               <p>App react native comsume datos</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item">
-            <div>
+            <div class="border border-5 border-dark rounded-2">
               <video src="/assets/video/icap.mp4" class="img-fluid" controls></video>
             </div>
             <div class="my-2 text-center">
               <p>App web ICAP</p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item">
+            <div class="border border-5 border-dark rounded-2">
+              <img src="assets/gif/presentacion.gif" class="img-fluid" alt="">
+            </div>
+            <div class="my-2 text-center">
+              <p>App bus</p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item">
+            <div class="border border-5 border-dark rounded-2">
+              <img src="assets/gif/presentacion2.gif" class="img-fluid" alt="">
+            </div>
+            <div class="my-2 text-center">
+              <p>App bus</p>
             </div>
           </div>
 
